config_setting(
    name = "x86_windows",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "x86_linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "x86_macos",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

alias(
    name = "zola",
    actual = select({
        ":x86_windows": "@zola-v0-14-1-x86_64-pc-windows-msvc//:zola.exe",
        ":x86_linux": "@zola-v0-14-1-x86-64-unknown-linux-gnu//:zola",
        ":x86_macos": "@zola-v0-14-1-x86_64-apple-darwin//:zola",
    }),
    visibility = ["//visibility:public"],
)
