load("//zola:defs.bzl", "zola_content_group")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")

bzl_library(
    name = "rules_zola",
    srcs = ["//zola:bazel"],
    deps = ["@bazel_skylib//lib:paths"],
)

stardoc(
    name = "rules_zola_docs",
    out = "api.md",
    header_template = "header.vm",
    input = "//zola:defs.bzl",
    deps = [":rules_zola"],
)

zola_content_group(
    name = "api",
    srcs = [":rules_zola_docs"],
    prefix = "docs/getting-started",
    strip_prefix = ".",
)

zola_content_group(
    name = "content",
    srcs = glob([
        "**/*.md",
    ]),
    strip_prefix = ".",
    visibility = ["//visibility:public"],
    deps = [":api"],
)
